
lcopula v0.4  		2018-07-06
############################
*Fix overloading ambiguity for Solaris

lcopula v0.3  		2018-06-09
############################
*New code for extremal attractors, now supported for non-integer valued cases
*Registration of native routines
*Change of maintainer email address

lcopula v0.206,  	2016-07-06
############################
*Fix in function sliouv (thanks to Marie-Pier Cote for signaling the bug)
*Improved root finding in isliouvm and isliouvm_m
*Improved documentation

lcopula v1,  		2015-08-26
############################
Package ported to CRAN