@@ -1,11 +1,11 @@
-f1e539d59a5ec0f0de6531db6f1e5dca *DESCRIPTION
-da97ebb74005e18880d674f053ef6a17 *NAMESPACE
-795fda643e2f6dc6f98f49f79ec28638 *NEWS
+dbf80cb8f084ee98545190ff85c15c1b *DESCRIPTION
+09e565938dad1b315932ea393355614e *NAMESPACE
+5d128da0f19c15868478aee4e8a8382a *NEWS
 7d7a694abc9286cb2878513ff2f93665 *R/RcppExports.R
-171fb4c9ab427a2dd11358c4b78f58ba *R/datasetdocu.R
-b0fc968aa8c0d9b38e2ff8be8fc59f4d *R/liouville.R
-938507e4f994ab1d1e3857e5f75aa000 *R/liouville_extreme.R
-ec153b89148c0eb2533994493e6ac26c *build/partial.rdb
+7d6f891bd7dafe471420ac011a815a91 *R/datasetdocu.R
+f7765e86cd3a5637f10865a02624eac2 *R/liouville.R
+2e236b34e05827966a59819fd476ece1 *R/liouville_extreme.R
+458e2492a558d1bbccd749e2395f1f2f *build/partial.rdb
 403579063a36a434aa9eb503c139ebc3 *data/airquality.rda
 5f7cc01adb5a3f8f4b53a4d728e3ba96 *data/danube.rda
 fb3437285dc0923099e997123bf26b67 *data/nutrient.rda
@@ -15,8 +15,8 @@ e33abd9ed9a75b7deaf9d06417986e44 *man/H_inv.Rd
 a1d8583d3c4abcb5696da2497f2a7abc *man/K.plot.Rd
 8f805a5546e7d6c87b237785ad2190f7 *man/Liouville.Rd
 8108230168e0482d7021ff39ba9eac16 *man/Liouville_marginal.Rd
-f1032e94dc0beb2ebf6229f6651d94ff *man/airquality.Rd
-12f4b583d7d3dba0baccdd34ed4910e4 *man/danube.Rd
+9606295789d02d062eb9debc110d6d7b *man/airquality.Rd
+d71cb6eb7bb5cd195172091de480c1a9 *man/danube.Rd
 08c4aceee092f1d3b2e301af35f731d8 *man/dirspecdens.Rd
 c79bf19e86dee948e9dfa8e9c322b9b1 *man/dot-ctspecdens.Rd
 2d7eab16050ac959169fb32348a4edd0 *man/dot-liouv.Tau_s.Rd
@@ -32,17 +32,17 @@ bcf58d1d5c8f97252a76a41fb24026b9 *man/express_coef_gumb.Rd
 912c0741c0579176d9d7181850d8fae0 *man/lcopula-package.Rd
 d16ee1e7379956ff0cf002939a985469 *man/liouv.Tau.Rd
 f49de4074804eca201b338444b62a198 *man/liouv.iTau.Rd
-2a62ca6e0be47a6b5b044ffc2099700d *man/liouv.maxim.Rd
+58bf750abd413b9fe10407382862bd1a *man/liouv.maxim.Rd
 ec7eebbe68de3a0473d82515b6892e41 *man/negdirspecdens.Rd
-439f2321fa93cfdb0d728f5decd9a8a9 *man/nutrient.Rd
+362cff9d8659f6edd7b28ff0683e0fb4 *man/nutrient.Rd
 40c2bc66c1e1f7ae2ec305084dadde41 *man/pickands.liouv.Rd
-4c4053236a194c2b755ffcffb0689d07 *man/pickands.plot.Rd
+7e3f263504f8062aec26d80bcdbf1560 *man/pickands.plot.Rd
 142e45207ee68450867222733338b241 *man/pliouv.opt.Rd
 1d7a9fdcf8b5f2d362752112f9149947 *man/rarchi.Rd
 46ec8ea1dc145b4030671634485da3ae *man/sliouv.Rd
 ae7b600771c3e77ae7fb5d38f6244d2f *man/sliouv_m.Rd
-f8ab95e10c56abe341ce1c68cef2e3f5 *man/theta.bci.Rd
-3d7f9a78639543d51bb127039317d412 *src/RcppExports.cpp
+37695eaa61bc56b7162a8b678fa8e085 *man/theta.bci.Rd
+3a4343f8431b15aba150d49fda05b9f6 *src/RcppExports.cpp
 693e5471c0de8e0dee668a01ee4ca1a4 *src/generic.cpp
 3eb4d94d923995466cd36503693974f8 *src/lcopula-init.c
 c1112eb78a4e09588be0bf83a6c4a20c *src/spectral_densities.cpp
