@@ -26,7 +26,7 @@ importFrom(graphics,"lines")
 importFrom(graphics,"mtext")
 importFrom(graphics,"plot.window")
 importFrom(graphics,"points")
-importFrom(pcaPP,cor.fk)
+importFrom(stats,"cor")
 importFrom(stats,"integrate")
 importFrom(stats,"optimise")
 importFrom(stats,"pbeta")
