@@ -8,6 +8,11 @@
 
 using namespace Rcpp;
 
+#ifdef RCPP_USE_GLOBAL_ROSTREAM
+Rcpp::Rostream<true>&  Rcpp::Rcout = Rcpp::Rcpp_cout_get();
+Rcpp::Rostream<false>& Rcpp::Rcerr = Rcpp::Rcpp_cerr_get();
+#endif
+
 // marginCombo
 NumericMatrix marginCombo(NumericVector alphavec, NumericMatrix mc);
 static SEXP _lcopula_marginCombo_try(SEXP alphavecSEXP, SEXP mcSEXP) {
